# MinimalCppProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  readme.md
src/: CMakeLists.txt  Example.cpp  Example.h
test/: CMakeLists.txt  ExampleTest.cpp
